Update about us

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@reduxjs/toolkit": "^2.2.3",
+    "@splinetool/react-spline": "^4.0.0",
     "@theme-toggles/react": "^4.1.0",
     "axios": "^1.6.8",
     "canvas-confetti": "^1.9.3",
@@ -39,6 +40,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.338.0",
     "marked": "^12.0.2",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
