--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,11 +32,11 @@ jobs:
       - name: Deploy static site to S3 bucket
         run: aws s3 sync ./dist/ s3://globaljobkorea --delete
 
-      - name: CloudFront Invalidation
-        uses: chetan/invalidate-cloudfront-action@master
-        with:
-          distribution-id: ${{ secrets.DISTRIBUTION_ID }}
-          paths: '/*'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      # - name: CloudFront Invalidation
+      #   uses: chetan/invalidate-cloudfront-action@master
+      #   with:
+      #     distribution-id: ${{ secrets.DISTRIBUTION_ID }}
+      #     paths: '/*'
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
