Fix footer display dynamically, google authentication

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_REACT_APP_API_URL=https://kjobapi.solutionaix.com/api
+VITE_GOOGLE_CLIENT_ID=816781301082-l8pvuhgrm6peqfbjtoa69f9re79rubkp.apps.googleusercontent.com
